# ocr-server

./: pyproject.toml
board/: admin.py  models.py  serializer.py  urls.py  views.py
board/migrations/: 0001_initial.py  0002_initial.py  0003_board_image_link.py
config/: settings.py  urls.py
ocr/: urls.py  views.py
static/script/: board-api.js  boards-api.js  user-api.js
static/style/: footer.css  form.css  grid.css  header.css  list.css
templates/: board.html  board_form.html  board_list.html  footer.html  header.html  index.html  join_form.html  login_form.html  mypage.html  user_update_form.html
users/: admin.py  models.py  serializer.py  urls.py  views.py
users/migrations/: 0001_initial.py
